   This enables proper handling of text/binary detection, line ending
   normalization, and filter specifications for files.
   (Jelmer Vernooĳ, #1211)

 * Add git bisect functionality including core bisect logic, porcelain
   commands (bisect_start, bisect_bad, bisect_good, bisect_skip,
   bisect_reset, bisect_log, bisect_replay), and CLI support.
   (Jelmer Vernooĳ, #1631)

0.23.1	2025-06-30

 * Support ``untracked_files="normal"`` argument to ``porcelain.status``,
   and make this the default.
   (Jelmer Vernooĳ, #835)

 * Fix ``parse_commit`` to properly dereference annotated tags when
   checking out tags. Previously, checking out an annotated tag would
   fail with a KeyError.
   (Jelmer Vernooĳ, #1638)

 * Handle different file type transitions properly in ``update_working_tree``
   (Jelmer Vernooĳ, #1638)

 * Fix KeyError when pulling from a shallow clone. Handle missing commits
   gracefully in graph traversal operations for shallow repositories.
   (Jelmer Vernooĳ, #813)

 * Return symrefs from ls_refs. (Jelmer Vernooĳ, #863)

 * Support short commit hashes in ``porcelain.reset()``.
   (Jelmer Vernooĳ, #1154)

 * Support dumb repository access.
   (Jelmer Vernooĳ, #1097)

 * Fix TypeError when cloning repositories with bytes paths on Windows.
   (Jelmer Vernooĳ, #973)

 * Support ``depth`` for local clones.
   (Jelmer Vernooĳ)

 * Add basic support for managing Notes. (Jelmer Vernooĳ)

 * Add basic ``cherry-pick`` subcommand.  (#1599, Jelmer Vernooĳ)

 * Add ``revert`` command to ``dulwich.porcelain`` and CLI.
   (#1599, Jelmer Vernooĳ)

 * Add annotate support as well as ``annotate`` and ``blame``
   commands.  (#245, Jelmer Vernooĳ)

 * Fix ``apply_delta`` to raise ``ApplyDeltaError`` instead of ``AssertionError``
   when the source buffer size doesn't match the delta header. This issue only
   affected the pure Python implementation when the Rust extension was not
   available. The Rust implementation already raised the correct exception.